--- a/rahma.com/index.php/layout/footer.html
+++ b/rahma.com/index.php/layout/footer.html
@@ -1,4 +1,10 @@
-<footer>
-    <hr />
-    <i>dibuat oleh Makanyuk Team</i> 
-<footer>
+<head>
+    <link rel="stylesheet" href="css/style.css"> 
+</head>
+<body>
+
+    <footer>
+        <hr />
+        <i>dibuat oleh Makanyuk Team</i> 
+    </footer>
+</body>
